--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Blog/Css/index.css">
-    <link rel="stylesheet" href="/Blog/Css/nav.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Blog/Css/index.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Blog/Css/nav.css">
     <title>Under's_main</title>
 </head>
 <body>
     <header>
-        <a href="/Blog/index.html">
+        <a href="https://underaaa.github.io/Under.github.io/Blog/index.html">
             <h1>
                 Underlife Website
             </h1>
@@ -78,5 +78,5 @@
     </main>
     <footer>@Underlife__</footer>
 </body>
-<script src="/Blog/JS/index.JS"></script>
+<script src="https://underaaa.github.io/Under.github.io/Blog/JS/index.JS"></script>
 </html>
