Update script source path in index.html to use correct repository structure

--- a/index.html
+++ b/index.html
@@ -78,5 +78,5 @@
     </main>
     <footer>@Underlife__</footer>
 </body>
-<script src="https://underaaa.github.io/Blog/JS/index.JS"></script>
+<script src="https://underaaa.github.io/Under.github.io/Blog/JS/index.JS"></script>
 </html>
