--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://underaaa.github.io/Blog/Css/index.css">
-    <link rel="stylesheet" href="https://underaaa.github.io/Blog/Css/nav.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Blog/Css/index.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Blog/Css/nav.css">
     <title>Under's_main</title>
 </head>
 <body>
