Fix link in index.html to point to the correct homepage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="https://underaaa.github.io/Under.github.io/Blog/index.html">
+        <a href="https://underaaa.github.io/Under.github.io/index.html">
             <h1>
                 Underlife Website
             </h1>
