Add new images and restructure JavaScript and CSS files for improved organization

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Blog/Css/index.css">
-    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Blog/Css/nav.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/index.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/nav.css">
     <title>Under's_main</title>
 </head>
 <body>
@@ -78,5 +78,5 @@
     </main>
     <footer>@Underlife__</footer>
 </body>
-<script src="https://underaaa.github.io/Under.github.io/Blog/JS/index.JS"></script>
+<script src="https://underaaa.github.io/Under.github.io/JS/index.JS"></script>
 </html>
