--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/index.css">
     <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/nav.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/header.css">
     <title>Under's_main</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
         <div id="mySidepanel" class="sidepanel">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <ul>
-                <li><a href="/">Latest With Me</a></li>
+                <li><a href="https://underaaa.github.io/Under.github.io/Blog.html">Blog</a></li>
                 <li><a href="/">Code</a></li>
                 <li><a href="/">Plans</a></li>
                 <li><a href="/">Tech Skills</a></li>
