Update script source in Blog.html to use the correct URL

--- a/Blog.html
+++ b/Blog.html
@@ -62,5 +62,5 @@
     </main>
     <footer>@Underlife__</footer>
 </body>
-<script src="/Blog/JS/index.JS"></script>
+<script src="https://underaaa.github.io/Under.github.io/JS/index.js"></script>
 </html>
