update for once

--- a/Blog.html
+++ b/Blog.html
@@ -55,8 +55,10 @@
         <section>
             <!-- This is for the main section -->
             <details class="Things">
-                <summary class=""><h2>Why I have a love and hate relation with AI</h2></summary>
-                <a href="/">dsadsa</a>
+                <summary class="">
+                    <h2>Navigating My Adulthood: Reflections and Goals After Graduation</h2>
+                </summary>
+                <a href="/">about to push this but all the writings there and got a little more comming</a>
             </details>
         </section>
     </main>
