update and look we made the first blog open to read

--- a/Blog.html
+++ b/Blog.html
@@ -58,7 +58,7 @@
                 <summary class="">
                     <h2>Navigating My Adulthood: Reflections and Goals After Graduation</h2>
                 </summary>
-                <a href="/">about to push this but all the writings there and got a little more comming</a>
+                <a href="https://underaaa.github.io/Under.github.io/first_blog.html">Go take a look still working on the ui but this is a personal story about my post graduation thinking.</a>
             </details>
         </section>
     </main>
