--- a/first_blog.html
+++ b/first_blog.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Css/first blog.css">
-    <link rel="stylesheet" href="Css/header.css">
-    <link rel="stylesheet" href="Css/nav.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/Blog_template.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/header.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/nav.css">
     <title>Under's_main</title>
 </head>
 <body>
@@ -62,7 +62,7 @@
             </p>
             <h3>The Job Hunt: How I Will Attempt To Get A Job
             </h3>
-            <p>Currently, I'm diligently applying for jobs, aiming to submit one or two resumes daily to maintain momentum. If I haven’t secured any leads within a month, I plan to take a more direct approach by printing out resumes and visiting workplaces to request in-person interviews. Alongside the job search, I've also dedicated time to revamping this website project. My goal is to build a set of templates that will streamline future writing and updates while I have less time because of a job.</p>
+            <p>Currently, I'm applying for jobs, aiming to submit one or two resumes daily to maintain momentum. If I haven’t secured any leads within a month, I plan to take a more direct approach by printing out resumes and visiting workplaces to request in-person interviews. Alongside the job search, I've also dedicated time to revamping this website project. My goal is to build a set of templates that will streamline future writing and updates while I have less time because of a job.</p>
             <h3>Renting Out A House and Securing the Future
             </h3>
             <p>Beyond securing employment, I’ve been actively focused on maintaining and improving our home. Having always taken pride in keeping things tidy, I've intensified my efforts since graduation. This includes tackling yard work, deep cleaning, and addressing general repairs to ensure the house remains fresh and comfortable. A notable achievement has been installing three air conditioners to prepare for the expected summer heat, which could exceed 30°C again this year. These have proven effective, especially during my various backyard projects. I even managed to revive a broken AC unit by cleaning it – a simple fix that saved me from potential discomfort.</p>
@@ -70,4 +70,4 @@
     </main>
     <footer>@Underlife__</footer>
 </body>
-<script src="JS/index.js"></script>
+<script src="https://underaaa.github.io/Under.github.io/JS/index.js"></script>
