--- a/first_blog.html
+++ b/first_blog.html
@@ -70,4 +70,4 @@
     </main>
     <footer>@Underlife__</footer>
 </body>
-<script src="https://underaaa.github.io/Under.github.io/JS/index.js"></script>
+<script src="https://underaaa.github.io/Under.github.io/JS/index.JS"></script>
