small changes working on a fix for the nav

--- a/Blog.html
+++ b/Blog.html
@@ -64,5 +64,5 @@
     </main>
     <footer>@Underlife__</footer>
 </body>
-<script src="https://underaaa.github.io/Under.github.io/JS/index.JS"></script>
+<script src="https://underaaa.github.io/Under.github.io/JS/index.js"></script>
 </html>
