ok it lookes fixed this better work

--- a/first_blog.html
+++ b/first_blog.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/Blog_template.css">
-    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/header.css">
     <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/nav.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/header.css">
     <title>Under's_main</title>
 </head>
 <body>
@@ -70,5 +70,5 @@
     </main>
     <footer>@Underlife__</footer>
 </body>
-<script src="https://underaaa.github.io/Under.github.io/JS/index.js"></script>
+<script src="https://underaaa.github.io/Under.github.io/JS/index.JS"></script>
 </html>
