testing this out one line change

--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
             <article>
                 <h2>This site is a project</h2>
                 <p>
-                    Hi my name is jacob smith/Underlife__ I am a tech hobbyist and try to learn everything 
-                    I can. This site was used to learn web development after trying it a few times. I also 
-                    plan to take a CS30 class before I go to college and pick out a few options that my 
-                    school gives for tech nerds/geeks. This site will be on GitHub and will try to do 
-                    some stuff in javascript and make some stories on me so you can get to know a little 
-                    about me.
+                    Hi my name is Jacob Smith/Underlife__ I am a tech hobbyist and try to learn everything 
+                    I can. This site was used to learn web development after trying it a few times. This site will be on GitHub and will try to do some stuff in javascript and make some stories on me so you can get to know a little about me.
                 </p>
             </article>
             <article>
