ok pushing a new blog for anyone that wants to read I wanted to do this after one major bug fix to the site

--- a/Blog.html
+++ b/Blog.html
@@ -58,7 +58,13 @@
                 <summary class="">
                     <h2>Navigating My Adulthood: Reflections and Goals After Graduation</h2>
                 </summary>
-                <a href="https://underaaa.github.io/Under.github.io/first_blog.html">Go take a look still working on the ui but this is a personal story about my post graduation thinking.</a>
+                <a href="https://underaaa.github.io/Under.github.io/first_blog.html">released on July 20st of 2025. Have a nice read</a>
+            </details>
+            <details class="Things">
+                <summary class="">
+                    <h2>My Journey with AI: From Excited Explorer to Concerned Observer</h2>
+                </summary>
+                <a href="https://underaaa.github.io/Under.github.io/second_blog.html">released on July 21st of 2025. Have a nice read</a>
             </details>
         </section>
     </main>
