plans page is up

--- a/first_blog.html
+++ b/first_blog.html
@@ -22,10 +22,10 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> 
             <ul>
                 <!-- In side the nav that is hidden tell open this is reused on many pages and uses java scriped a little to keep it hidden and able to be responsive on its own -->
-                <li><a href="Blog.html">Blog</a></li>
-                <li><a href="/">Plans</a></li>
-                <li><a href="/">Tech Skills</a></li>
-                <li><a href="/">Soldering</a></li>
+                <li><a href="https://underaaa.github.io/Under.github.io/Blog.html">Blog</a></li>
+                <li><a href="https://underaaa.github.io/Under.github.io/plans.html">Plans</a></li>
+                <li><a href="/">Tech Skills (inprogress)</a></li>
+                <li><a href="/">Soldering (inprogress)</a></li>
             </ul>
         </div>
         <div class="blog-nav-left-sp" >
