--- a/plans.html
+++ b/plans.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/index.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/blog.css">
     <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/nav.css">
     <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/header.css">
     <title>Under's_main</title>
@@ -20,11 +20,10 @@
         <div id="mySidepanel" class="sidepanel">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <ul>
-                <!-- In side the nav that is hidden tell open this is reused on many pages and uses java scriped a little to keep it hidden and able to be responsive on its own -->
                 <li><a href="https://underaaa.github.io/Under.github.io/Blog.html">Blog</a></li>
-                <li><a href="https://underaaa.github.io/Under.github.io/plans.html">Plans</a></li>
-                <li><a href="/">Tech Skills (inprogress)</a></li>
-                <li><a href="/">Soldering (inprogress)</a></li>
+                <li><a href="/">Plans</a></li>
+                <li><a href="/">Tech Skills</a></li>
+                <li><a href="/">Soldering</a></li>
             </ul>
         </div>
         <div class="blog-nav-left-sp" >
@@ -54,23 +53,20 @@
             </div>
         </aside>
         <section>
-            <article>
-                <h2>This site is a project</h2>
-                <p>
-                    Hi my name is Jacob Smith/Underlife__ I am a tech hobbyist and try to learn everything 
-                    I can. This site was used to learn web development after trying it a few times. This site will be on GitHub and will try to do some stuff in javascript and make some stories on me so you can get to know a little about me.
-                </p>
-            </article>
-            <article>
-                <h2>What do I plan to do if tech doesn’t come out to be a job</h2>
-                <p>
-                    For me, tech is my main goal but I do plan to get into Trades
-                    work as a backup. I have a liking for hands-on work like woodworking and 
-                    trade jobs since they are mentally healthy for someone like me. I do plan to build 
-                    out both careers if I can, and try to volunteer for both types of jobs so I don’t end up with 
-                    no job when I'm older.
-                </p>
-            </article>
+            <h3>Plans for the website</h3>
+            <p>I plan to publish a few blogs each month and add new features that I’ve tested out.</p>
+                <hr style="border: none; height: 24px; background: none; margin: 0; padding: 0;">
+            <p>I’d like visitors to have ways to contact me and see what services I offer, such as repair work or other projects, but I might limit in‑person help to my city.</p>
+                <hr style="border: none; height: 24px; background: none; margin: 0; padding: 0;">
+            <p>I’m also going to redo the UI so the site looks nicer.</p>
+            <h3>For tech learning</h3>
+            <p>I want to keep advancing my skills every day and make progress that brings me closer to the career I want.</p>
+            <h3>Random things I’m doing (and plan to talk about)</h3>
+            <p>Using a Chromebook as my main laptop, I’m trying to use it every day.</p>
+                <hr style="border: none; height: 24px; background: none; margin: 0; padding: 0;">
+            <p>While doing that, I’ll manage the NAS I set up and create a better setup with a budget under $500 that matches the laptop’s performance.</p>
+            <h3>AI stuff</h3>
+            <p>I use an AI bot to rewrite my writing so it’s more grammatically correct. As of today I’m using OpenAI GPT‑OSS 20B. Many people dislike AI, but I prefer a local LLM that keeps my data private and helps me re-write because of my dyslexia.</p>
         </section>
     </main>
     <footer>@Underlife__</footer>
