tech plans made and removing soldering

--- a/tech_skills.html
+++ b/tech_skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/blog.css">
+    <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/index.css">
     <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/nav.css">
     <link rel="stylesheet" href="https://underaaa.github.io/Under.github.io/Css/header.css">
     <title>Under's_main</title>
@@ -53,20 +53,36 @@
             </div>
         </aside>
         <section>
-            <h3>Plans for the website</h3>
-            <p>I plan to publish a few blogs each month and add new features that I’ve tested out.</p>
-                <hr style="border: none; height: 24px; background: none; margin: 0; padding: 0;">
-            <p>I’d like visitors to have ways to contact me and see what services I offer, such as repair work or other projects, but I might limit in‑person help to my city.</p>
-                <hr style="border: none; height: 24px; background: none; margin: 0; padding: 0;">
-            <p>I’m also going to redo the UI so the site looks nicer.</p>
-            <h3>For tech learning</h3>
-            <p>I want to keep advancing my skills every day and make progress that brings me closer to the career I want.</p>
-            <h3>Random things I’m doing (and plan to talk about)</h3>
-            <p>Using a Chromebook as my main laptop, I’m trying to use it every day.</p>
-                <hr style="border: none; height: 24px; background: none; margin: 0; padding: 0;">
-            <p>While doing that, I’ll manage the NAS I set up and create a better setup with a budget under $500 that matches the laptop’s performance.</p>
-            <h3>AI stuff</h3>
-            <p>I use an AI bot to rewrite my writing so it’s more grammatically correct. As of today I’m using OpenAI GPT‑OSS 20B. Many people dislike AI, but I prefer a local LLM that keeps my data private and helps me re-write because of my dyslexia.</p>
+            <article>
+                <h2>My tech skill so far</h2>
+                <h3>What I know how to do very well</h3>
+                <ul>
+                    <li>PC repair/troubleshooting</li>
+                    <li>Windows diagnosis</li>
+                    <li>PC builds budget to high-end</li>
+                    <li>Basic laptop stuff like specs</li>
+                    <li>Basic linux knowledge</li>
+                    <li>Custom keyboards</li>
+                    <li>Controller repair</li>
+                    <li>Basic soldering skills</li>
+                    <li>Very very basic web development</li>
+                    <li>Local LLM’s</li>
+                    <li>PC deep cleaning</li>
+                </ul>
+                <h3>Learning</h3>
+                <ul>
+                    <li>Dockers</li>
+                    <li>Advance linux</li>
+                    <li>Coding </li>
+                    <li>Nas</li>
+                    <li>Home servers</li>
+                    <li>Phone repair</li>
+                    <li>Advance Soldering</li>
+                    <li>Board repair</li>
+                    <li>Server hardware</li>
+                    <li>Vr repair</li>
+                </ul>
+            </article>
         </section>
     </main>
     <footer>@Underlife__</footer>
