--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                 <!-- In side the nav that is hidden tell open this is reused on many pages and uses java scriped a little to keep it hidden and able to be responsive on its own -->
                 <li><a href="https://underaaa.github.io/Under.github.io/Blog.html">Blog</a></li>
                 <li><a href="https://underaaa.github.io/Under.github.io/plans.html">Plans</a></li>
-                <li><a href="/">Tech Skills (inprogress)</a></li>
-                <li><a href="/">Soldering (inprogress)</a></li>
+                <li><a href="https://underaaa.github.io/Under.github.io/tech_skills.html">Tech Skills</a></li>
             </ul>
         </div>
         <div class="blog-nav-left-sp" >
