--- a/Blog.html
+++ b/Blog.html
@@ -64,6 +64,12 @@
                 </summary>
                 <a href="https://underaaa.github.io/Under.github.io/second_blog.html">released on July 21st of 2025. Have a nice read</a>
             </details>
+            <details class="Things">
+                <summary class="">
+                    <h2>My First Chromebook</h2>
+                </summary>
+                <a href="https://underaaa.github.io/Under.github.io/chromebook.html">released on August 26th of 2025. have a nice read</a>
+            </details>
         </section>
     </main>
     <footer>@Underlife__</footer>
