tech journey blog

--- a/Blog.html
+++ b/Blog.html
@@ -58,17 +58,26 @@
                 </summary>
                 <a href="https://underaaa.github.io/Under.github.io/first_blog.html">released on July 20st of 2025. Have a nice read</a>
             </details>
+            <br>
             <details class="Things">
                 <summary class="">
                     <h2>My Journey with AI: From Excited Explorer to Concerned Observer</h2>
                 </summary>
                 <a href="https://underaaa.github.io/Under.github.io/second_blog.html">released on July 21st of 2025. Have a nice read</a>
             </details>
+            <br>
             <details class="Things">
                 <summary class="">
                     <h2>My First Chromebook</h2>
                 </summary>
                 <a href="https://underaaa.github.io/Under.github.io/chromebook.html">released on August 26th of 2025. have a nice read</a>
+            </details>
+            <br>
+             <details class="Things">
+                <summary class="">
+                    <h2>Tech Journey: From start to now</h2>
+                </summary>
+                <a href="https://underaaa.github.io/Under.github.io/tech_journey.html">released on August 31st of 2025. Have a nice read</a>
             </details>
         </section>
     </main>
