--- a/Blog.html
+++ b/Blog.html
@@ -79,6 +79,13 @@
                 </summary>
                 <a href="https://underaaa.github.io/Under.github.io/tech_journey.html">released on August 31st of 2025. Have a nice read</a>
             </details>
+            <br>
+            <details class="Things">
+                <summary class="">
+                    <h2>The Upgrading Life</h2>
+                </summary>
+                <a href="https://underaaa.github.io/Under.github.io/the_upgrading _life.html">released on September 4th of 2025. Have a nice read</a>
+            </details>
         </section>
     </main>
     <footer>@Underlife__</footer>
